# ai-assignment

./: readme.md
__MACOSX/: ._readme.md
__MACOSX/app/core/: ._remote.py
__MACOSX/app/ontology_dc8f06af066e4a7880a5938933236037/: .___init__.py  ._input.py
app/: Dockerfile  ignite.py  main.py  pyproject.toml  requirements.txt  start.sh
app/config/: execution.json  manifest.json  properties.json  state.json
app/core/: remote.py  stub.py
app/datastore/: state.json
app/ontology_dc8f06af066e4a7880a5938933236037/: config.py  input.py  output.py
onto/dc8f06af066e4a7880a5938933236037/: meta.json
onto/dc8f06af066e4a7880a5938933236037/connection/: ConfigClass.json  InputClass.json  OutputClass.json
onto/dc8f06af066e4a7880a5938933236037/defaults/: ConfigClass.json  InputClass.json  OutputClass.json
onto/dc8f06af066e4a7880a5938933236037/encoding/: ConfigClass.json  InputClass.json  OutputClass.json
onto/dc8f06af066e4a7880a5938933236037/instruction/: ConfigClass.json  InputClass.json  OutputClass.json
onto/dc8f06af066e4a7880a5938933236037/naming/: ConfigClass.json  InputClass.json  OutputClass.json
onto/dc8f06af066e4a7880a5938933236037/restriction/: ConfigClass.json  InputClass.json  OutputClass.json
onto/dc8f06af066e4a7880a5938933236037/structure/: ConfigClass.json  InputClass.json  OutputClass.json
onto/dc8f06af066e4a7880a5938933236037/subset/: ConfigClass.json  InputClass.json  OutputClass.json
onto/dc8f06af066e4a7880a5938933236037/validation/: ConfigClass.json  InputClass.json  OutputClass.json
